--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-* {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
 .App {
   box-sizing: border-box;
 }
@@ -12,9 +5,8 @@
 .App-header {
   background-color: #282c34;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
   padding: 12px;
